# tickertier

./: .gitignore  .vercelignore  LICENSE  Makefile  README.en.md  README.md  README.zh-CN.md  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: daily.yml
api/: awards_meta.py  deps.py  main.py  models.py
api/routes/: awards.py  portfolio.py  race.py  stocks.py
api/tests/: conftest.py  test_awards.py  test_health.py  test_portfolio.py  test_race.py  test_stocks.py
data/: db.py  personas.py  portfolio.example.json  schema.sql  universe.json
data/awards/: _helpers.py  registry.py  tier.py
data/cache/: finnhub_AAOI.json  finnhub_ADI.json  finnhub_AEHR.json  finnhub_AKAM.json  finnhub_ALAB.json  finnhub_AMAT.json  finnhub_AMD.json  finnhub_AMKR.json  finnhub_AMSC.json  finnhub_ANET.json  finnhub_AOSL.json  finnhub_ARM.json  finnhub_ASML.json  finnhub_ASX.json  finnhub_AVGO.json  finnhub_AXTI.json  finnhub_BE.json  finnhub_CAMT.json  finnhub_CEG.json  finnhub_CIEN.json  finnhub_CLS.json  finnhub_COHR.json  finnhub_COHU.json  finnhub_CRDO.json  finnhub_CRWV.json  finnhub_CSCO.json  finnhub_DELL.json  finnhub_ENPH.json  finnhub_ENTG.json  finnhub_ETN.json  finnhub_FN.json  (+49 more)
docs/: AGENT_BRIEF.md  CRON.md
reports/: D4-E2-acceptance-2026-05-09.md
scripts/: daily.sh  export_json.py  generate_daily_card.py  generate_og_images.py  health.py  notify_telegram.py  run_daily.py  sanity.py
stock_awards.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
web/: index.html  mockup.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
(+161 files in other folders)
