[project]
name = "stock-awards"
version = "0.1.0"
description = "美股颁奖娱乐平台 — 每日给你的自选/持仓股票颁奖、评 tier、做名人堂"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.50",
    "duckdb>=1.0",
    "pandas>=2.0",
    "pyarrow>=15.0",
    "finnhub-python>=2.4",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.6",
    "scikit-learn>=1.4",
    "pandas-market-calendars>=4.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5"]

[tool.setuptools.packages.find]
where = ["."]
include = ["data*", "api*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["data/tests", "api/tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
