[project]
name = "tickertier"
version = "0.1.0"
description = "tickertier · 夯股 — 每天给你的股票颁奖"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0",
    "fastapi>=0.115",
    "pydantic>=2.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["data*", "api*"]

[tool.vercel]
entrypoint = "api.main:app"
